@@ -2,6 +2,12 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
+   156: sluys, 21/05/2009
+     - moved code to start MCMC offset to new subroutine startMCMCOffset()
+     - choice from input file respected: start at inj/best value, start from
+       Gaussian around inj/best value, start uniformly from prior range
+     - consistency check on input file: abort if injection value outside prior range
+     
    152: sluys, 13/05/2009
      - moved files in doc/ around
    
